@@ -1,3 +1,12 @@
+2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
+
+	* prettytable.c: search the .desktop name before the exec
+	field. This gets Nautilus right for me (instead of showing 
+	a help icon). Also don't need to shorten names
+
+	* proctable.c: use info->cmd to search for icons and names
+	since that is not shortened
+
 2001-11-03  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.[c,h]: add new config variables to save the disk
